openshift/windows-containers/windows-workload-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: "Test Windows Workload"
  name: windows-workload
