openshift/windows-containers/asp.net-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asp-deployment
  labels:
    app: asp
    openshift-example: "yes"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asp
  template:
    metadata:
      labels:
        app: asp
        openshift-example: "yes"
    spec:
      runtimeClassName: windows-2019
      containers:
      - name: asp
        image: mcr.microsoft.com/dotnet/framework/samples:aspnetapp
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: asp
  labels:
    openshift-example: "yes"
spec:
  selector:
    app: asp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    openshift-example: "yes"
  name: asp-deployment
  namespace: windows-workload
spec:
  host: asp-deployment-windows-workload.apps.ocp.aws.tntinfra.net
  port:
    targetPort: 80
  to:
    kind: Service
    name: asp
    weight: 100
  wildcardPolicy: None
