openshift/windows-containers/example-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: win-webserver
  name: win-webserver
  namespace: windows-workload
spec:
  selector:
    matchLabels:
      app: win-webserver
  replicas: 1
  template:
    metadata:
      labels:
        app: win-webserver
      name: win-webserver
    spec:
      tolerations:
      - key: "os"
        value: "Windows"
        Effect: "NoSchedule"
      containers:
      - name: windowswebserver
        image: mcr.microsoft.com/windows/servercore:ltsc2019
        imagePullPolicy: IfNotPresent
        command:
        - powershell.exe
        - -command
        - $listener = New-Object System.Net.HttpListener; $listener.Prefixes.Add('http://*:8080/'); $listener.Start();Write-Host('Listening at http://*:8080/'); while ($listener.IsListening) { $context = $listener.GetContext(); $response = $context.Response; $content='<html><body><H1>Red Hat OpenShift + Windows Container Workloads</H1></body></html>'; $buffer = [System.Text.Encoding]::UTF8.GetBytes($content); $response.ContentLength64 = $buffer.Length; $response.OutputStream.Write($buffer, 0, $b [...]
        ports:
        - containerPort: 8080
#        securityContext:
#          windowsOptions:
#            runAsUserName: "ContainerAdministrator"
      nodeSelector:
        kubernetes.io/os: windows
---
apiVersion: v1
kind: Service
metadata:
  name: win-webserver
  labels:
    openshift-example: "yes"
spec:
  selector:
    app: win-webserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    openshift-example: "yes"
  name: win-webserver
  namespace: windows-workload
spec:
  host: win-webserver-windows-workload.apps.ocp.aws.tntinfra.net
  port:
    targetPort: 8080
  to:
    kind: Service
    name: win-webserver
    weight: 100
  wildcardPolicy: None
